syntax = "proto3";

option go_package = "github.com/durd07/grpc-test/tra";
option java_multiple_files = true;
option java_package = "io.grpc.examples.tra";
option java_outer_classname = "TraProto";

package envoy.extensions.filters.network.sip_proxy.v3;

service TraService {
	rpc nodes(TraRequest) returns (TraResponse) {}
}

message TraRequest {
	string fqdn = 1;
}

message TraResponse {
	string fqdn = 1;
	repeated Node nodes = 2;
}

message Node {
	string node_id = 1;
	string ip = 2;
	uint32 sip_port = 3;
	uint32 weight = 4;
}
